// Copyright 2024 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.clusterconfig.v1;

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/clusterconfig/v1;clusterconfigv1";

// AccessGraphConfig holds the information about the configured Access Graph service.
message AccessGraphConfig {
  // enabled indicates if the Access Graph is enabled for the cluster.
  bool enabled = 1;
  // address is the address of the access graph service. The address is in the
  // form of "host:port".
  string address = 2;
  // ca is the PEM-encoded CA certificate of the access graph service.
  bytes ca = 3;
  // insecure is a flag that indicates whether the access graph service should
  // skip verifying the server's certificate chain and host name.
  bool insecure = 4;
  // secrets_scan_config is used to configure the parameters for the secrets scanning functionality.
  AccessGraphSecretsScanConfiguration secrets_scan_config = 5;
}

// AccessGraphSecretsScanConfiguration controls the secrets scanning service parameters.
message AccessGraphSecretsScanConfiguration {
  // ssh_scan_enabled indicates if the SSH scan feature is enabled for the cluster.
  bool ssh_scan_enabled = 1;
}
